test/ui/src/compile_fail/std/span_guard_catch_unwind.rs
#[emit::span(rt: RT, guard: span, catch_unwind: true, "test")]
pub fn exec(fail: bool) {
    
}

fn main() {

}
